--- a/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
@@ -22,6 +22,7 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="ShowMain"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
