--- a/Mobile_Computing_project/app/src/main/res/layout/activity_cart.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cartActivity">
+    tools:context=".Activity.cartActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -149,9 +149,14 @@
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:text="TextView" />
+                android:layout_height="50dp"
+                android:layout_margin="16dp"
+                android:textSize="25dp"
+                android:gravity="center"
+                android:background="@drawable/purple_button_background"
+                android:textStyle="bold"
+
+                android:text="CheckOut" />
 
         </LinearLayout>
     </ScrollView>
