--- a/Mobile_Computing_project/app/src/main/res/layout/activity_main.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,12 @@
 
     <ScrollView
         android:id="@+id/scrollView4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,39 +60,58 @@
                     android:layout_height="match_parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_width="412dp"
+                        android:layout_height="577dp"
+                        tools:layout_editor_absoluteX="0dp">
 
                         <TextView
                             android:id="@+id/textView10"
                             android:layout_width="114dp"
                             android:layout_height="20dp"
-                            android:layout_marginTop="224dp"
+                            android:layout_marginTop="270dp"
+                            android:layout_marginBottom="39dp"
                             android:text="Popular Items"
+                            app:layout_constraintBottom_toTopOf="@+id/popular_items"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.033"
+                            app:layout_constraintHorizontal_bias="0.043"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/popular_items"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            tools:layout_editor_absoluteY="396dp" />
+                            android:layout_width="404dp"
+                            android:layout_height="96dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="19dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginBottom="44dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
                         <TextView
                             android:id="@+id/textView8"
-                            android:layout_width="114dp"
-                            android:layout_height="20dp"
+                            android:layout_width="119dp"
+                            android:layout_height="24dp"
+                            android:layout_marginTop="125dp"
+                            android:layout_marginBottom="13dp"
                             android:text="Categories"
-                            tools:layout_editor_absoluteX="10dp"
-                            tools:layout_editor_absoluteY="125dp" />
+                            app:layout_constraintBottom_toTopOf="@+id/categories"
+                            app:layout_constraintEnd_toEndOf="@+id/textView10"
+                            app:layout_constraintStart_toStartOf="@+id/textView10"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/categories"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            tools:layout_editor_absoluteY="158dp" />
+                            android:layout_width="417dp"
+                            android:layout_height="176dp"
+                            android:layout_marginBottom="44dp"
+                            app:layout_constraintBottom_toTopOf="@+id/popular_items"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.4"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView8" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -99,9 +122,13 @@
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="414dp"
         android:layout_height="132dp"
-        tools:layout_editor_absoluteY="599dp" >
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
