--- a/Mobile_Computing_project/app/src/main/res/layout/activity_main.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,7 @@
         android:layout_marginEnd="50dp"
         android:layout_weight="1"
         android:text="Cart"
+        android:onClick="ShowCart"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button3" />
