--- a/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
@@ -6,27 +6,93 @@
     android:layout_height="match_parent"
     tools:context=".detailActivity">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="168dp"
-        android:layout_height="57dp"
-        android:text="This is the detail activity page"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.349"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.167" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button4"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/titleTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:text="Title"
+                android:textAlignment="center"
+                android:textColor="#800080"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/priceTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="$"
+                android:textAlignment="center"
+                android:textColor="#800080"
+                android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/giftPic"
+                android:layout_width="match_parent"
+                android:layout_height="299dp"
+                app:srcCompat="@drawable/day_summer_garden_flora" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/minusBTN"
+                    android:layout_width="30dp"
+                    android:layout_height="38dp"
+
+                    app:srcCompat="@drawable/btn1" />
+
+                <TextView
+                    android:id="@+id/numberOrderTxt"
+                    android:layout_width="37dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="1"
+                    android:textAlignment="center"
+                    android:textColor="#373b54"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/plusBTN"
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+
+                    app:srcCompat="@drawable/btn2" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/descriptionTxt"
+                android:layout_width="351dp"
+                android:layout_height="24dp"
+                android:layout_margin="16dp"
+                android:text="Description"
+                android:textColor="#686767"
+                android:textColorHint="#7A1D1D"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.435"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.42" />
+        android:text="TextView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
