--- a/Mobile_Computing_project/app/src/main/res/layout/viewholder_card.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/viewholder_card.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="10dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="10dp"
-    android:background="@android:color/holo_orange_light"
+    android:background="@drawable/card_background"
     android:elevation="3dp">
 
     <ImageView
