Check out button
check out button added

--- a/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
@@ -7,8 +7,12 @@
     tools:context=".Activity.detailActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/scrollView2"
+        android:layout_width="392dp"
+        android:layout_height="513dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -90,8 +94,20 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:id="@+id/addToCardBtn"
+        android:layout_width="391dp"
+        android:layout_height="79dp"
+        android:background="@drawable/purplebckground"
+        android:elevation="3dp"
+        android:gravity="center"
+        android:text="Add to Card"
+        android:textColor="#ffffff"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.977" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
