--- a/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/activity_detail.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
-                android:text="Title"
+                android:text="Gift Items"
                 android:textAlignment="center"
                 android:textColor="#800080"
                 android:textSize="24sp"
